--- a/overlay-evox/packages/apps/Settings/res/values/evolution_config.xml
+++ b/overlay-evox/packages/apps/Settings/res/values/evolution_config.xml
@@ -14,7 +14,7 @@
 <resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
 
     <!-- Device specific doze package -->
-    <string name="config_customDozePackage">org.lineageos.settings.doze/org.lineageos.settings.doze.DozeSettingsActivity</string>
+    <string name="config_customDozePackage">com.my.device.doze/com.my.device.doze.DozeSettingsActivity</string>
 
     <!-- Battery Health -->
     <bool name="config_supportBatteryHealth">false</bool>
